# Simit-Consultant

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: simit.py
backend/app/core/: config.py  database.py
backend/app/integrations/: simit_client.py
backend/app/models/: consulta.py
backend/app/repositories/: consulta_repository.py
backend/app/schemas/: simit_schema.py
backend/app/services/: simit_service.py
backend/app/utils/: __init__.py
frontend/: package-lock.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/lib/: axios.ts
frontend/src/modules/consults/components/: BulkAccordion.tsx  ErrorBox.tsx  FineCard.tsx  MetaField.tsx  ResultCard.tsx  SkeletonCard.tsx  StatusBadge.tsx
frontend/src/modules/consults/controllers/: consults.controller.ts
frontend/src/modules/consults/dto/: consults.dto.ts
frontend/src/modules/consults/pages/: ConsultPage.tsx  HistoryPage.tsx
frontend/src/modules/consults/services/: consults.service.ts
