[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Simit Consultant"
version = "0.1.0"
description = "API Backend con FastAPI para la prueba técnica"
authors = [
    {name = "Juan Jara", email = "jaracalle2041@gmail.com"}
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint==4.0.5"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint]
max-line-length = 88
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]